# neuroglancer-python

./: .gitignore  Makefile  README.md  control_volume_bindings.py  get_help.py  package-lock.json  packing_bits.ipynb  pyproject.toml
create_downsampled/: .env.example  README.md  chunk_utils.py  chunking.py  downsample_wells.py  gcs.py  gcs_local_io.py  io.py  load_config.py  main.py  requirements.txt  volume.py  wells.py
data_conversion/: pyproject.toml  write_segmentation.py
data_conversion/neuroglancer_data_conversion/: chunk.py  compressed_segmentation_encoding.py  io.py  segmentation_decoding.py  segmentation_encoding.py  utils.py  write_segmentation.py
examples/: .env.example  add_points_many_properties.py  add_polylines.py  add_polylines_many_properties.py  all_data_types.py  allen_zarr_volume.py  control_volume_bindings.py  convert_annotations.py  convert_swc.py  create_downampled.py  create_state_from_many_sources.py  gain_example.py  generate_ome_zarr_0_6.py  get_help.py  histogram.py  load_google.py  load_multires_n5.py  load_nrrd.py  load_sis.py  load_tiff.py  load_tiff_seg.py  local_volume.py  local_volume_screenshot.py  logo.py  make_coordinate_space.py  max_projection.py  minimal_max.py  minimal_screenshot.py  multi_channel_mode.py  multichannel_allen_cells3d.py  serve_default_dir.py  settings.py  single_data_point.py  single_data_point_transfer_function.py  small_minimal.py  sphere.py  transfer_function.py  very_large_n_dims.py  write_annotations.py  write_points_with_properties.py  (+2 more)
neuroglancer_utils/: layer_utils.py  local_server.py  shaders.py
(+36 files in other folders)
