[project]
name = "neuroglancer_utils"
version = "0.0.1"
dependencies = [
    "neuroglancer",
    "zarr",
    "numba",
    "scikit-image",
    "pooch",
]

[build-system]
requires = ["setuptools>= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroglancer_utils"]
exclude = ["examples", "tests", "notebooks"]
