[project]
name = "neuroglancer_utils"
version = "0.0.1"
requires-python = ">= 3.11, <3.14"
dependencies = [
    "neuroglancer",
    "zarr",
    "numba",
    "scikit-image",
    "pooch",
    "cloud-volume",
]

[build-system]
requires = ["setuptools>= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroglancer_utils"]
exclude = ["examples", "tests", "notebooks", "data_conversion"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
neuroglancer_utils = { path = ".", editable = true }

[tool.pixi.tasks]
