[project]
name = "neuroglancer-data-conversion"
version = "0.0.1"
dependencies = [
    "ome-zarr",
    "numpy",
    "dask",
    "zarr",
    "neuroglancer"
]

[build-system]
requires = ["setuptools>= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroglancer_data_conversion"]
exclude = ["examples", "tests", "notebooks"]